--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.23.0",
     "web-vitals": "^2.1.4",
     "wowjs": "^1.1.3"
   },
