--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "counterup2": "^2.0.2",
+    "gsap": "^3.13.0",
     "jquery": "^3.7.1",
     "owl.carousel": "^2.3.4",
     "react": "^19.1.0",
