--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "jquery": "^3.7.1",
     "owl.carousel": "^2.3.4",
     "react": "^19.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^10.0.0",
     "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.23.0",
